workshop03/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1
  labels:
      name: myapp1

spec:
    replicas: 1
    selector:
        matchLabels:
          app: myapp
          version: v1
    template:
        metadata:
          labels:
            app: myapp
            version: v1
        spec:
            containers:
                - image: stackupiss/northwind-app:v1
                  name: myapp
                  ports:
                    - containerPort: 3000
                      name: myapp-port
                  imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp2
  labels:
      name: myapp2

spec:
    replicas: 1
    selector:
        matchLabels:
          app: myapp
          version: v2
    template:
        metadata:
          labels:
            app: myapp
            version: v2
        spec:
            containers:
                - image: stackupiss/northwind-app:v2
                  name: myapp
                  ports:
                    - containerPort: 3000
                      name: myapp-port
                  imagePullPolicy: Always
