workshop03/myapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-v1
spec:
  selector:
    app: myapp
    version: v1
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-v2
spec:
  selector:
    app: myapp
    version: v2
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
